--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <nav id="sideMenu">
     <a href="index.html">Ana Sayfa</a>
     <a href="hakkimizda.html">Hakkımızda</a>
-    <a href="#">Kur’an Duaları</a>
+    <a href="quran.html">Kur’an Duaları</a>
     <a href="#">Hadis Duaları</a>
 </nav>
 
