--- a/index.html
+++ b/index.html
@@ -3,20 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>MyDua</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-<!-- VIDEO INTRO -->
-<div id="videoIntro">
-    <video id="introVideo" autoplay muted>
-        <source src="video/intro.mp4" type="video/mp4">
-        Tarayıcınız video desteklemiyor.
-    </video>
-</div>
-
-<!-- SITE -->
-<div id="siteContent" class="hidden">
 
 <header class="top-bar">
     <div class="hamburger" onclick="toggleMenu()">☰</div>
@@ -28,25 +18,32 @@
 
 <nav id="sideMenu">
     <a href="index.html">Ana Sayfa</a>
+    <a href="quran.html">Kur'an-ı Kerim Duaları</a>
+    <a href="hadis.html">Peygamberimiz'den Dualar</a>
+    <a href="favoriler.html">Favorilerim</a>
+    <a href="kuran.html">Kur'an-ı Kerim</a>
+    <a href="hadisler.html">Hadisler</a>
     <a href="hakkimizda.html">Hakkımızda</a>
-    <a href="quran.html">Kur’an Duaları</a>
-    <a href="#">Hadis Duaları</a>
 </nav>
 
-<main>
+<main class="container">
     <h1>MyDua</h1>
-    <p>
-        Kur’an-ı Kerim ve Hadis-i Şeriflerde yer alan
-        sahih duaları sade ve ferah bir arayüzle sunar.
+    <p class="subtitle">
+        Kur'an-ı Kerim ve Hadis-i Şeriflerde yer alan sahih duaları
+        sade ve güvenilir bir şekilde sunar.
     </p>
+
+    <div class="auth-buttons">
+        <button onclick="googleLogin()">Google ile Giriş</button>
+        <button onclick="googleLogout()">Çıkış</button>
+    </div>
 </main>
 
 <footer>
     © 2026 MyDua
 </footer>
 
-</div>
-
 <script src="js/menu.js"></script>
+<script type="module" src="js/firebase.js"></script>
 </body>
-      </html>
+    </html>
