--- a/index.html
+++ b/index.html
@@ -50,5 +50,12 @@
 <script src="js/menu.js"></script>
 <script type="module" src="js/firebase.js"></script>
 
+<button onclick="testJS()">JS TEST</button>
+
+<script>
+  function testJS() {
+    alert("JS ÇALIŞIYOR");
+  }
+        </script>
 </body>
     </html>
