--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="profile-wrapper">
             <div class="profile-icon" onclick="toggleProfileMenu()">👤</div>
             <div id="profileMenu" class="profile-menu">
-                <button onclick="googleLogin()">Google ile Giriş</button>
-                <button onclick="googleLogout()">Çıkış</button>
+  <button id="loginBtn">Google ile Giriş</button>
+  <button id="logoutBtn">Çıkış</button>
             </div>
         </div>
 
@@ -50,12 +50,5 @@
 <script src="js/menu.js"></script>
 <script type="module" src="js/firebase.js"></script>
 
-<button onclick="testJS()">JS TEST</button>
-
-<script>
-  function testJS() {
-    alert("JS ÇALIŞIYOR");
-  }
-        </script>
 </body>
     </html>
