--- a/index.html
+++ b/index.html
@@ -39,13 +39,17 @@
     <a href="hadisler.html">Hadisler</a>
 </nav>
 
-<main class="content">
-    <h1>MyDua</h1>
-    <p>
-        Kur’an-ı Kerim ve Hadis-i Şeriflerde yer alan sahih duaları
-        sade ve ferah bir arayüzle sunan açık kaynaklı bir platformdur.
-    </p>
+<main class="hero">
+  <h1>MyDua</h1>
+  <p>
+    Kur'an-ı Kerim ve Hadis-i Şeriflerde yer alan sahih duaları
+    sade ve ferah bir arayüzle sunan açık kaynaklı bir platformdur.
+  </p>
 </main>
+
+<footer class="footer">
+  © 2026 MyDua. Tüm hakları saklıdır.
+</footer>
 
 <script src="js/menu.js"></script>
 <script type="module" src="js/firebase.js"></script>
