--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -1,62 +1,90 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <title>Hakkımızda - MyDua</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>Hakkımızda | MyDua</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+<!-- ÜST BAR -->
 <header class="top-bar">
-    <div class="hamburger" onclick="toggleMenu()">☰</div>
+  <div class="hamburger" onclick="toggleMenu()">☰</div>
+
+  <div class="right-box">
     <div class="logo-circle">
-        <img src="images/logo.png" alt="MyDua Logo">
+      <img src="logo.png" alt="MyDua Logo">
     </div>
+  </div>
 </header>
 
-<nav id="sideMenu">
-    <a href="index.html">Ana Sayfa</a>
-    <a href="hakkimizda.html">Hakkımızda</a>
-    <a href="#">Kur’an Duaları</a>
-    <a href="#">Hadis Duaları</a>
+<!-- YAN MENÜ -->
+<nav id="sideMenu" class="side-menu">
+  <a href="index.html">Ana Sayfa</a>
+  <a href="hakkimizda.html" class="active">Hakkımızda</a>
+  <a href="#">Kur'an-ı Kerim Duaları</a>
+  <a href="#">Peygamberimiz'den Dualar</a>
+  <a href="#">Favorilerim</a>
+  <a href="#">Kur'an-ı Kerim</a>
+  <a href="#">Hadisler</a>
 </nav>
 
-<main>
-    <h1>Hakkımızda</h1>
+<!-- İÇERİK -->
+<main class="page">
+  <h1>Hakkımızda</h1>
 
-    <p>
-        <strong>MyDua</strong>, Kur’an-ı Kerim ve Hadis-i Şeriflerde yer alan
-        sahih duaları tek bir platformda, sade ve anlaşılır bir şekilde
-        sunmak amacıyla hazırlanmış bir web projesidir.
-    </p>
+  <p>
+    <strong>MyDua</strong>, Kur’an-ı Kerim ve Hadis-i Şeriflerde yer alan
+    sahih duaları tek bir platformda toplamak amacıyla oluşturulmuş
+    açık kaynaklı bir web projesidir.
+  </p>
 
-    <p>
-        Bu proje; duayı hayatının bir parçası haline getirmek isteyen,
-        Rabbine yönelirken sahih kaynaklara dayanmayı önemseyen herkes için
-        faydalı bir başvuru kaynağı olmayı hedefler.
-    </p>
+  <p>
+    Amacımız; dua etmek isteyen herkesin, güvenilir kaynaklardan
+    alınmış dualara sade, hızlı ve ferah bir arayüzle ulaşmasını
+    sağlamaktır.
+  </p>
 
-    <p>
-        MyDua’da yer alan dualar, Kur’an-ı Kerim ayetleri ve güvenilir hadis
-        kaynaklarından derlenerek paylaşılmaktadır. İçerikler hazırlanırken
-        sadelik, doğruluk ve erişilebilirlik esas alınmıştır.
-    </p>
+  <p>
+    MyDua; reklam karmaşasından uzak, kullanıcı odaklı ve sürekli
+    geliştirilebilir bir yapıda tasarlanmıştır.
+  </p>
 
-    <p>
-        Bu site herhangi bir ticari amaç gütmemekte olup,
-        hayırlı bir ilim ve <em>sadaka-i cariye</em> niyetiyle geliştirilmiştir.
-    </p>
+  <p>
+    Bu proje zamanla büyüyerek; favoriler, arama, filtreleme ve
+    kullanıcıya özel özelliklerle daha da geliştirilecektir.
+  </p>
 
-    <p>
-        Rabbimizden niyazımız; bu çalışmayı faydalı kılması ve
-        hayra vesile eylemesidir.
-    </p>
+  <hr class="divider">
+
+  <!-- VİZYON & MİSYON -->
+  <section class="vm">
+    <div class="vm-box">
+      <h2>Vizyonumuz</h2>
+      <p>
+        Kur’an-ı Kerim ve Hadis-i Şeriflerde yer alan sahih duaları
+        dijital ortamda en güvenilir, sade ve erişilebilir şekilde
+        sunan örnek bir platform olmak.
+      </p>
+    </div>
+
+    <div class="vm-box">
+      <h2>Misyonumuz</h2>
+      <p>
+        Dua etmek isteyen herkesin güvenilir kaynaklara kolayca
+        ulaşmasını sağlamak, karmaşadan uzak bir kullanıcı deneyimi
+        sunmak ve bu alanı sürekli geliştirerek faydalı bir dijital
+        hizmet haline getirmek.
+      </p>
+    </div>
+  </section>
 </main>
 
-<footer>
-    © 2026 MyDua
+<footer class="footer">
+  © 2026 MyDua. Tüm hakları saklıdır.
 </footer>
 
 <script src="js/menu.js"></script>
 </body>
-</html>
+    </html>
