--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -14,7 +14,7 @@
 
   <div class="right-box">
     <div class="logo-circle">
-      <img src="logo.png" alt="MyDua Logo">
+      <img src="images/logo.png" alt="MyDua Logo">
     </div>
   </div>
 </header>
@@ -23,11 +23,11 @@
 <nav id="sideMenu" class="side-menu">
   <a href="index.html">Ana Sayfa</a>
   <a href="hakkimizda.html" class="active">Hakkımızda</a>
-  <a href="#">Kur'an-ı Kerim Duaları</a>
-  <a href="#">Peygamberimiz'den Dualar</a>
-  <a href="#">Favorilerim</a>
-  <a href="#">Kur'an-ı Kerim</a>
-  <a href="#">Hadisler</a>
+  <a href="quran.html">Kur'an-ı Kerim Duaları</a>
+  <a href="hadis.html">Peygamberimiz'den Dualar</a>
+  <a href="favoriler.html">Favorilerim</a>
+  <a href="kuran.html">Kur'an-ı Kerim</a>
+  <a href="hadisler.html">Hadisler</a>
 </nav>
 
 <!-- İÇERİK -->
