--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
     <div class="hamburger" onclick="toggleMenu()">☰</div>
 
     <div class="right-box">
-        <!-- Profil -->
-        <div class="profile-wrapper">
-            <div class="profile-icon" onclick="toggleProfileMenu()">👤</div>
-            <div id="profileMenu" class="profile-menu">
-  <button id="loginBtn">Google ile Giriş</button>
-  <button id="logoutBtn">Çıkış</button>
-            </div>
-        </div>
-
+        
         <!-- Logo -->
         <div class="logo-circle">
             <img src="images/logo.png" alt="MyDua Logo">
@@ -34,7 +26,6 @@
     <a href="hakkimizda.html">Hakkımızda</a>
     <a href="quran.html">Kur'an-ı Kerim Duaları</a>
     <a href="hadis.html">Peygamberimiz'den Dualar</a>
-    <a href="favoriler.html">Favorilerim</a>
     <a href="kuran.html">Kur'an-ı Kerim</a>
     <a href="hadisler.html">Hadisler</a>
 </nav>
@@ -52,7 +43,7 @@
 </footer>
 
 <script src="js/menu.js"></script>
-<script type="module" src="js/firebase.js"></script>
+<script type="module" 
 
 </body>
     </html>
