--- a/quran.html
+++ b/quran.html
@@ -30,9 +30,9 @@
   <h1>Kur’an-ı Kerim Duaları</h1>
   <p class="page-desc">Kur’an-ı Kerim’de geçen ve dua niteliği taşıdığı kabul edilen ayetlerin listesi.</p>
 
-  <div id="duaList" class="dua-list">
-    <p>Dualar yükleniyor...</p>
-  </div>
+  <div id="duaGrid" class="dua-grid"></div>
+
+<button id="yenileBtn" class="refresh-btn">🔄 Yenile</button>
 </main>
 
 <footer class="footer">
